tests/ui/field_path_private.stderr
error[E0616]: field `email` of struct `Profile` is private
  --> tests/ui/field_path_private.rs:18:17
   |
18 | #[derive(Debug, Validate)]
   |                 ^^^^^^^^ private field
   |
   = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
